Enable gdrive3 on Linux
Enabled gdrive3 on Linux to sync Google Drive since the Google Drive
client is not supported.
Also, updated the emacs config to only run the calendar syncing script
on Linux.

--- a/files/nix/home-manager/programs/emacs/README.org
+++ b/files/nix/home-manager/programs/emacs/README.org
@@ -1286,7 +1286,7 @@
          (defun gtd ()
            (interactive)
            (find-file org-gtd-file))
-         (when (and (file-directory-p (expand-file-name "GoogleDrive" (getenv "HOME")))  (display-graphic-p))
+         (when (and (eq system-type 'gnu/linux) (display-graphic-p))
            (run-at-time 0 (* 5 60)
                         (lambda ()
                           (start-process "copy-calendar" nil "bash" (expand-file-name "personal_config/calendar/copy_calendar.sh" my:d:data-dir)))))
