Disable bidirectional display reordering in Emacs
The variable `bidi-display-reordering` is set to nil to disable
bidirectional display reordering. This change is introduced to address
visual artifacts and potential compatibility issues arising from the
default bidirectional text handling.

--- a/files/nix/home-manager/programs/emacs/README.org
+++ b/files/nix/home-manager/programs/emacs/README.org
@@ -267,7 +267,8 @@
       user-full-name (getenv "NAME")
       completion-lazy-hilit t
       process-adaptive-read-buffering t
-      require-final-newline t)
+      require-final-newline t
+      bidi-display-reordering nil)
 
      (use-package simple
        :demand t
