--- a/files/nix/home-manager/programs/emacs/README.org
+++ b/files/nix/home-manager/programs/emacs/README.org
@@ -296,11 +296,21 @@
 ** Font
    #+begin_src emacs-lisp
      (when (display-graphic-p)
-       (if (eq system-type 'darwin)
-           (set-frame-font "PlemolJP Console NF-18" nil t)
-         (set-frame-font "PlemolJP Console NF-16" nil t))
-       (set-fontset-font t 'symbol "Hack Nerd Font" nil 'append)
-       (set-fontset-font t 'unicode "Hack Nerd Font" nil 'append))
+       (set-face-attribute 'default nil
+                           :family "PlemolJP Console NF"
+                           :height (if (eq system-type 'darwin) 180 160))
+
+       (set-face-attribute 'fixed-pitch nil
+                           :family "PlemolJP Console NF")
+
+       (dolist (charset '(japanese-jisx0208 japanese-jisx0212 katakana-jisx0201))
+         (set-fontset-font t charset
+                           (font-spec :family "PlemolJP Console NF")))
+
+       (with-eval-after-load 'org
+         (set-face-attribute 'org-table nil :inherit 'fixed-pitch)
+         (set-face-attribute 'org-block nil :inherit 'fixed-pitch)
+         (set-face-attribute 'org-code  nil :inherit 'fixed-pitch)))
 
      (use-package nerd-icons :ensure t)
 
