--- a/files/nix/home-manager/programs/emacs/README.org
+++ b/files/nix/home-manager/programs/emacs/README.org
@@ -132,15 +132,17 @@
 
      (when (executable-find "gtrash")
        (defun system-move-file-to-trash (filename)
-         "Move FILENAME to trash using `gtrash put`."
-         ;; Avoid trashing remote files via TRAMP
-         (when (file-remote-p filename)
-           (error "Refusing to trash remote file: %s" filename))
-         (let ((exit-code
-                (call-process "gtrash" nil nil nil "put" filename)))
-           (unless (zerop exit-code)
-             (error "gtrash put failed for %s" filename))
-           t)))
+         "Move FILENAME to trash using `gtrash put`.
+
+     For TRAMP files, fall back to the default Emacs behavior."
+         (if (file-remote-p filename)
+             ;; Let Emacs handle TRAMP files normally (i.e. unlink)
+             nil
+           (let ((exit-code
+                  (call-process "gtrash" nil nil nil "put" filename)))
+             (unless (zerop exit-code)
+               (error "gtrash put failed for %s" filename))
+             t))))
    #+end_src
 ** Assigning directory name to the same buffer name
    #+begin_src emacs-lisp
