--- a/files/nix/home-manager/programs/emacs/README.org
+++ b/files/nix/home-manager/programs/emacs/README.org
@@ -127,22 +127,18 @@
        :config
        (delete-selection-mode t))
 
-     ;; Move deleted files to trash using gtrash
-     (setopt delete-by-moving-to-trash t)
+     ;; Move deleted files to trash (local only)
+     (setopt delete-by-moving-to-trash t
+             remote-file-name-inhibit-delete-by-moving-to-trash t)
 
      (when (executable-find "gtrash")
        (defun system-move-file-to-trash (filename)
-         "Move FILENAME to trash using `gtrash put`.
-
-     For TRAMP files, fall back to the default Emacs behavior."
-         (if (file-remote-p filename)
-             ;; Let Emacs handle TRAMP files normally (i.e. unlink)
-             nil
-           (let ((exit-code
-                  (call-process "gtrash" nil nil nil "put" filename)))
-             (unless (zerop exit-code)
-               (error "gtrash put failed for %s" filename))
-             t))))
+         "Move FILENAME to trash using `gtrash put`."
+         (let ((exit-code
+                (call-process "gtrash" nil nil nil "put" filename)))
+           (unless (zerop exit-code)
+             (error "gtrash put failed for %s" filename))
+           t)))
    #+end_src
 ** Assigning directory name to the same buffer name
    #+begin_src emacs-lisp
