--- a/files/nix/home-manager/programs/emacs/README.org
+++ b/files/nix/home-manager/programs/emacs/README.org
@@ -822,6 +822,12 @@
        :ensure t
        :bind (("C-M-;" . er/expand-region)
               ("C-M-'" . er/contract-region)))
+
+     (use-package expreg
+       :ensure t
+       :bind
+       ("C-=" . expreg-expand)
+       ("C-+" . expreg-contract))
    #+end_src
 ** which-key
    #+begin_src emacs-lisp
@@ -2194,7 +2200,7 @@
          (setopt ellama-provider
                  (make-llm-gemini
                   :key (plist-get (nth 0 (auth-source-search :app "gemini" :max 1)) :api-key)
-                  :chat-model "gemini-2.0-flash"))))
+                  :chat-model "gemini-2.5-flash"))))
    #+end_src
 ** Translate
    #+begin_src emacs-lisp
